--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,16 +16,46 @@
         android:id="@+id/gameFragment"
         android:name="com.example.knowyourmountains.GameFragment"
         android:label="GameFragment" >
+        <argument
+            android:name="category"
+            app:argType="string"
+            android:defaultValue="Całość" />
+        <argument
+            android:name="questionCount"
+            app:argType="integer"
+            android:defaultValue="20" />
         <action
             android:id="@+id/action_gameFragment_to_resultFragment"
             app:destination="@id/resultFragment" />
+        <action
+            android:id="@+id/action_gameFragment_to_startFragment"
+            app:destination="@id/startFragment" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.example.knowyourmountains.ResultFragment"
         android:label="ResultFragment" >
+        <argument
+            android:name="score"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="totalQuestions"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="category"
+            app:argType="string"
+            android:defaultValue="Całość" />
+        <argument
+            android:name="questionCount"
+            app:argType="integer"
+            android:defaultValue="20" />
         <action
             android:id="@+id/action_resultFragment_to_startFragment"
             app:destination="@id/startFragment" />
+        <action
+            android:id="@+id/action_resultFragment_to_gameFragment"
+            app:destination="@id/gameFragment" />
     </fragment>
 </navigation>
