--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Knowyourmountains" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/medium_mud_green</item> <item name="colorOnPrimary">@color/black</item> <item name="android:colorBackground">@color/light_mud_green</item>
+        <item name="colorPrimary">@color/medium_mud_green</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:colorBackground">@color/light_mud_green</item>
         <item name="colorSurface">@color/white</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
